--- a/011-todo-list/src/App/App.css
+++ b/011-todo-list/src/App/App.css
@@ -4,8 +4,12 @@
   display: flex;
 }
 
+.flex {
+  display: flex;
+}
+
 .flex-column {
-  flex: 1;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
 }
