--- a/011-todo-list/src/App/Components/Todo/TodoEditor.css
+++ b/011-todo-list/src/App/Components/Todo/TodoEditor.css
@@ -20,13 +20,17 @@
 
 .todo-editor textarea:focus {
   outline: none;
-  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .todo-editor textarea.title {
   font-size: 1.5rem;
   font-weight: 600;
   border: none;
+}
+
+.todo-editor textarea.title:focus,
+.todo-editor textarea.title:hover {
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .todo-editor textarea.description {
@@ -37,4 +41,11 @@
 
 .todo-editor button {
   margin-top: 1rem;
+}
+
+@media (prefers-color-scheme: light) {
+  .todo-editor textarea.title:focus,
+  .todo-editor textarea.title:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
 }
