Split out due date input as separate component

--- a/011-todo-list/src/App/Components/Todo/Inputs/Inputs.css
+++ b/011-todo-list/src/App/Components/Todo/Inputs/Inputs.css
@@ -9,3 +9,12 @@ select.todo-priority {
 select.todo-priority option {
   color: black;
 }
+
+input.todo-due-date {
+  appearance: none;
+  font: inherit;
+  background-color: transparent;
+  color: inherit;
+  border: none;
+  width: 100%;
+}
