Finalize style of application
- Make sections scroll independently (overflow-y: auto)
- TodoEditor consumes available vertical space
- Visually distinguish "Create Project" button
- Add an accent color to buttons

--- a/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
+++ b/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
@@ -1,17 +1,18 @@
 .project-navigator {
   width: clamp(150px, 20%, 250px);
   background-color: rgba(255, 255, 255, 0.03);
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .project-navigator ul {
   width: 100%;
   list-style: none;
-  position: sticky;
-  top: 0;
 }
 
 .project-navigator li {
   padding: 0.5rem 1rem;
+  user-select: none;
 }
 
 .project-navigator li.active,
@@ -21,7 +22,17 @@
 }
 
 .project-navigator li.create-project {
-  opacity: 0.5;
+  position: sticky;
+  top: 0;
+  font-weight: 600;
+  background-color: var(--accent-color);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+.project-navigator li.create-project:hover {
+  background-color: var(--accent-color-hover);
 }
 
 @media (prefers-color-scheme: light) {
