--- a/011-todo-list/src/App/Components/TodoList/TodoList.css
+++ b/011-todo-list/src/App/Components/TodoList/TodoList.css
@@ -15,19 +15,9 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.todo-list .is-empty {
-  text-align: center;
-}
-
 .todo-list table {
   width: 100%;
   border-collapse: collapse;
-}
-
-.todo-list table caption {
-  font-size: 1.5rem;
-  text-align: left;
-  padding: 8px;
 }
 
 .todo-list th.sortable {
@@ -72,9 +62,6 @@
 
 .todo-list table input[type="text"] {
   appearance: none;
-}
-
-.todo-list table input[type="text"] {
   font: inherit;
   background-color: transparent;
   color: inherit;
@@ -88,8 +75,7 @@
 
 .todo-list th.sortable:hover,
 .todo-list table tr.active,
-.todo-list table tr:hover,
-.todo-list table tr:has(input[type="text"]:focus) {
+.todo-list table tr:hover {
   background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -116,8 +102,7 @@
 
   .todo-list th.sortable:hover,
   .todo-list table tr.active,
-  .todo-list table tr:hover,
-  .todo-list table tr:has(input[type="text"]:focus) {
+  .todo-list table tr:hover {
     background-color: rgba(0, 0, 0, 0.05);
   }
 
