--- a/012-weather-app/src/App/App.css
+++ b/012-weather-app/src/App/App.css
@@ -7,81 +7,11 @@
   height: 100vh;
 }
 
-.search {
+.content {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-
-.search input {
-  font: inherit;
-  padding: 8px;
-  margin-bottom: 0.5rem;
-}
-
-.search .results {
-  position: relative;
-}
-
-.search ul {
-  list-style: none;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 5px;
-  box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5);
-  position: absolute;
-  width: 100%;
-  background-color: #2a2a2a;
-  z-index: 1;
-}
-
-.search ul li {
-  padding: 0.5rem;
-  cursor: pointer;
-}
-
-.search ul li:focus,
-.search ul li:hover {
-  background-color: rgba(255, 255, 255, 0.05);
-}
-
-.current-location {
-  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
   align-items: center;
-  gap: 2rem;
-  font-size: 2rem;
-}
-
-.current-location .clear {
-  margin-left: auto;
-  background: transparent;
-  border: 1px solid white;
-  border-radius: 5px;
-  padding: 0.5rem 1rem;
-}
-
-.current-weather {
-  margin-bottom: 1rem;
-}
-
-.current-weather .temperature {
-  font-size: 2rem;
-}
-
-.current-weather .last-updated {
-  opacity: 0.5;
-}
-
-.forecast {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  margin-bottom: 1rem;
-}
-
-.forecast .daily-weather {
-  padding: 1rem;
-  border-radius: 0.5rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .api-key {
