wip: Add menu button to eventually toggle units

--- a/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
+++ b/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
@@ -1,13 +1,12 @@
 .search {
+  flex: 1 1 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
 }
 
 .search input {
   font: inherit;
   padding: 8px;
-  margin-bottom: 0.5rem;
 }
 
 .search .results {
