--- a/012-weather-app/src/App/App.css
+++ b/012-weather-app/src/App/App.css
@@ -5,6 +5,13 @@
   flex-direction: column;
   padding: 1rem;
   height: 100vh;
+  gap: 1rem;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .content {
@@ -17,4 +24,9 @@
 .api-key {
   align-self: flex-end;
   margin-top: auto;
+}
+
+.icon {
+  height: 2rem;
+  filter: invert(80%);
 }
