--- a/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
+++ b/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
@@ -7,6 +7,8 @@
 .search input {
   font: inherit;
   padding: 8px;
+  background-color: var(--light-background-color);
+  border: 1px solid var(--input-border-color);
 }
 
 .search .results {
