--- a/012-weather-app/src/App/Components/Weather/Weather.css
+++ b/012-weather-app/src/App/Components/Weather/Weather.css
@@ -3,18 +3,15 @@
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
+  gap: 1rem;
 }
 
 .current-weather .column {
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem 2rem;
-}
-
-.current-weather .column:first-child {
-  border-right: 2px solid rgba(255, 255, 255, 0.2);
-  padding-left: 0;
+  padding: 1rem 0;
 }
 
 .current-weather .temperature {
@@ -23,4 +20,19 @@
 
 .current-weather .last-updated {
   opacity: 0.5;
+}
+
+.current-weather .column:has(.large-icon) {
+  flex: 0 0 auto;
+}
+
+.current-weather .large-icon {
+  min-width: 6rem;
+  filter: invert(100%);
+}
+
+@media (width < 500px) {
+  .current-weather .large-icon {
+    display: none;
+  }
 }
