wip: implement light color scheme

--- a/012-weather-app/src/App/Components/Weather/Weather.css
+++ b/012-weather-app/src/App/Components/Weather/Weather.css
@@ -31,6 +31,12 @@
   filter: invert(100%);
 }
 
+@media (prefers-color-scheme: light) {
+  .current-weather .large-icon {
+    filter: invert(20%);
+  }
+}
+
 @media (width < 500px) {
   .current-weather .large-icon {
     display: none;
