--- a/012-weather-app/src/index.css
+++ b/012-weather-app/src/index.css
@@ -31,3 +31,21 @@ button:hover {
   cursor: pointer;
   background-color: var(--hover-background-color);
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --color: #213547;
+    --background-color: #f0f0f0;
+    --light-background-color: #ffffff;
+    --input-border-color: #7a7a7a;
+    --hover-background-color: #ffffff;
+  }
+
+  button {
+    background-color: var(--light-background-color);
+    border: none;
+    box-shadow:
+      0 1px 2px rgba(0, 0, 0, 0.1),
+      0 2px 3px rgba(0, 0, 0, 0.2);
+  }
+}
