--- a/012-weather-app/src/App/Components/Forecast/Forecast.css
+++ b/012-weather-app/src/App/Components/Forecast/Forecast.css
@@ -33,3 +33,9 @@
   font-size: 1.2rem;
   font-weight: 400;
 }
+
+@media (prefers-color-scheme: light) {
+  .forecast .card {
+    background-color: #ffffff;
+  }
+}
