--- a/014-battleship/src/App/App.css
+++ b/014-battleship/src/App/App.css
@@ -1,9 +1,16 @@
 #root {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
   margin: 0 auto;
   padding: 2rem;
   border: 1px solid red;
+}
+
+.flex {
+  display: flex;
+  gap: 1rem;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
