--- a/014-battleship/src/index.css
+++ b/014-battleship/src/index.css
@@ -19,6 +19,12 @@
   background-color: var(--background-color);
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
