Allow user to select from list of deployed ships

--- a/014-battleship/src/App/Components/GameBoard/Components/Square/Square.css
+++ b/014-battleship/src/App/Components/GameBoard/Components/Square/Square.css
@@ -7,7 +7,10 @@
   user-select: none;
 }
 
-.gameboard .square.occupiedByActiveShip,
+.gameboard .square.occupiedByActiveShip {
+  background-color: var(--active-square-color);
+}
+
 .gameboard .square.occupiedByDeployedShip {
   background-color: var(--occupied-square-color);
 }
