--- a/014-battleship/src/App/Components/GameSetup/Components/DeploymentStatus/DeploymentStatus.css
+++ b/014-battleship/src/App/Components/GameSetup/Components/DeploymentStatus/DeploymentStatus.css
@@ -30,3 +30,10 @@
   cursor: pointer;
   background: rgba(255, 255, 255, 0.1);
 }
+
+@media (prefers-color-scheme: light) {
+  .deployment-status button.selected,
+  .deployment-status button:hover {
+    background: rgba(0, 0, 0, 0.1);
+  }
+}
