Allow gameboards to wrap on narrow screen

--- a/014-battleship/src/App/App.css
+++ b/014-battleship/src/App/App.css
@@ -3,9 +3,18 @@
   padding: 2rem;
 }
 
-.flex {
+.flex,
+.flex-wrap {
   display: flex;
   gap: 1rem;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.centered {
+  justify-content: center;
 }
 
 .flex-column {
