Allow gameboard to (somewhat) resize with window

--- a/014-battleship/src/App/Components/GameBoard/GameBoard.css
+++ b/014-battleship/src/App/Components/GameBoard/GameBoard.css
@@ -1,7 +1,16 @@
 .gameboard {
+  flex: 1 0 auto;
+
   display: grid;
-  grid-template-columns: repeat(10, 3rem);
-  grid-template-rows: repeat(10, 3rem);
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+
+  --min-size: 350px;
+  --max-size: 45vmin;
+  height: max(var(--min-size), var(--max-size));
+  width: max(var(--min-size), var(--max-size));
+
+  font-size: calc(0.4 * var(--max-size) / 10);
 }
 
 .gameboard.playable:hover {
