--- a/014-battleship/src/index.css
+++ b/014-battleship/src/index.css
@@ -29,7 +29,9 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
