--- a/014-battleship/src/App/Components/FleetStatus/FleetStatus.css
+++ b/014-battleship/src/App/Components/FleetStatus/FleetStatus.css
@@ -11,17 +11,12 @@
 .fleet-status .score {
   text-align: center;
   font-size: 8rem;
-  line-height: normal;
-}
-
-.fleet-status h2 {
-  margin-bottom: 0.5rem;
-  font-size: 1rem;
+  line-height: 100%;
 }
 
 .fleet-status .active,
 .fleet-status .sunk {
-  padding: 1rem;
+  padding: 0 1rem;
   margin-top: auto;
 }
 
