--- a/014-battleship/src/index.css
+++ b/014-battleship/src/index.css
@@ -31,7 +31,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
