--- a/014-battleship/src/App/App.css
+++ b/014-battleship/src/App/App.css
@@ -1,8 +1,11 @@
 #root {
-  padding: 2rem;
+  padding: 1rem 0;
 }
 
-.flex,
+.flex {
+  display: flex;
+}
+
 .flex-wrap {
   display: flex;
   gap: 2rem;
